CSS fixes for Application tables in Step 3
Now that we are moving away from One Table To Rule Them All,
we are seeing things break to do with checkboxes in smaller tables.

Generally these are reasonably easy fixes but I found that some
CSS was too narrowly targeted (would not apply to checklists in step 3),
vs other CSS that was too general (_should_ only apply to checklists
in step 5).

--- a/nofos/bloom_nofos/static/theme-base.css
+++ b/nofos/bloom_nofos/static/theme-base.css
@@ -327,30 +327,16 @@ body.cms-white table td img.usa-icon--check_box_outline_blank {
   box-shadow: inset 0px 0px 5px 3px var(--color--table-blue);
 }
 
-.section--step-5-submit-your-application
-  .section--content
-  table
-  tr
-  td.usa-icon__td
-  > div {
+.section--content table tr td.usa-icon__td > div {
   display: flex;
 }
 
-.section--step-5-submit-your-application
-  .section--content
-  table
-  tr
-  td.usa-icon__td {
+.section--content table tr td.usa-icon__td {
   vertical-align: top;
 }
 
-.section--step-5-submit-your-application
-  .section--content
-  table
-  tr
-  td.usa-icon__td
-  span {
-  line-height: 1.25;
+.section--content table tr td.usa-icon__td span {
+  line-height: 1.3;
 }
 
 /* Cinch up the lines on individual <a> tags in the application checklist */
